tests/test76.rael.exp
Error [tests/test76.rael:2:12]: Index too big
| log :array at 56
|            ^
